Fix list item spacing

--- a/src/scss/grommet-index/_objects.index-list.scss
+++ b/src/scss/grommet-index/_objects.index-list.scss
@@ -1,5 +1,7 @@
 // (C) Copyright 2014-2015 Hewlett Packard Enterprise Development LP
 
-// .index-list {
-//
-// }
+.index-list {
+  .status-icon {
+    margin-right: 6px;
+  }
+}
